Fixed cart animation and it being off the screen visibly

--- a/src/components/nav/resetAndOutlet.module.css
+++ b/src/components/nav/resetAndOutlet.module.css
@@ -107,3 +107,7 @@ body {
 .Outlet {
   padding: 20px;
 }
+
+body{
+  max-width: 100vw;
+}
